<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="http://schemas.android.com/apk/res-auto" tools:ignore="ExtraTranslation">

    <!-- App -->
    <string name="app_name">熊愛電視</string>
    <string name="app_unlock">已解鎖</string>
    <string name="app_update">發現新版本</string>
    <string name="app_uuid">UUID : <xliff:g name="name">%s</xliff:g></string>

    <!-- Channel -->
    <string name="channel_keep_insert">已加入收藏</string>
    <string name="channel_keep_delete">已移除收藏</string>
    <string name="channel_type_keep">收藏</string>
    <string name="channel_type_setting">設定</string>
    <string name="channel_error">連線失敗，請稍後再試</string>
    <string name="channel_epg">暫無頻道資訊</string>

    <!-- Setting -->
    <string name="setting_common">一般設定</string>
    <string name="setting_common_size">字體大小</string>
    <string name="setting_common_boot">開機啟動</string>
    <string name="setting_common_full">全螢幕</string>
    <string name="setting_common_pad">小鍵盤</string>
    <string name="setting_common_pip">畫中畫</string>
    <string name="setting_common_draw">渲染方式</string>
    <string name="setting_common_surface">Surface</string>
    <string name="setting_common_texture">Texture</string>
    <string name="setting_control">控制設定</string>
    <string name="setting_control_delay">數字鍵延遲</string>
    <string name="setting_control_rev">上下鍵相反</string>

    <!-- Column -->
    <string name="column_user">使用者</string>
    <string name="column_version">版本</string>
    <string name="column_device">裝置</string>
    <string name="column_enable">啟用</string>
    <string name="column_date">登入日期</string>
    <string name="column_ip">位址</string>

    <!-- Keypad -->
    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="add">+</string>
    <string name="sub">-</string>

</resources>
