<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|end"
    android:layout_margin="12dp"
    android:orientation="vertical"
    android:visibility="gone"
    tools:visibility="visible">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            style="@style/KeyStyle"
            android:onClick="onKeyDown"
            android:tag="@string/num_1"
            android:text="@string/num_1" />

        <TextView
            style="@style/KeyStyle"
            android:onClick="onKeyDown"
            android:tag="@string/num_2"
            android:text="@string/num_2" />

        <TextView
            style="@style/KeyStyle"
            android:onClick="onKeyDown"
            android:tag="@string/num_3"
            android:text="@string/num_3" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            style="@style/KeyStyle"
            android:onClick="onKeyDown"
            android:tag="@string/num_4"
            android:text="@string/num_4" />

        <TextView
            style="@style/KeyStyle"
            android:onClick="onKeyDown"
            android:tag="@string/num_5"
            android:text="@string/num_5" />

        <TextView
            style="@style/KeyStyle"
            android:onClick="onKeyDown"
            android:tag="@string/num_6"
            android:text="@string/num_6" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            style="@style/KeyStyle"
            android:onClick="onKeyDown"
            android:tag="@string/num_7"
            android:text="@string/num_7" />

        <TextView
            style="@style/KeyStyle"
            android:onClick="onKeyDown"
            android:tag="@string/num_8"
            android:text="@string/num_8" />

        <TextView
            style="@style/KeyStyle"
            android:onClick="onKeyDown"
            android:tag="@string/num_9"
            android:text="@string/num_9" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/add"
            style="@style/KeyStyle"
            android:onClick="onAdd"
            android:text="@string/add" />

        <TextView
            style="@style/KeyStyle"
            android:onClick="onKeyDown"
            android:tag="@string/num_0"
            android:text="@string/num_0" />

        <TextView
            android:id="@+id/sub"
            style="@style/KeyStyle"
            android:onClick="onSub"
            android:text="@string/sub" />

    </TableRow>
</LinearLayout>